[gd_scene load_steps=11 format=3 uid="uid://cv1202d8pg8ct"]

[ext_resource type="Script" path="res://Scenes/UI/level_completed.gd" id="1_4voqc"]
[ext_resource type="Theme" uid="uid://dejvr5rqllmfx" path="res://Aesthethics/button.tres" id="2_h54kp"]

[sub_resource type="Animation" id="Animation_dn1g0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer/VBoxContainer/Hearts:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer/VBoxContainer/Deaths:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CenterContainer/VBoxContainer/Time:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CenterContainer/VBoxContainer/LevelGoalTime:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CenterContainer/VBoxContainer/Score:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yyyw5"]
resource_name = "show"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_n7tcw"]
resource_name = "show_deaths"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Deaths:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6gbu7"]
resource_name = "show_goal_time"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/LevelGoalTime:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gf70s"]
resource_name = "show_hearts"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Hearts:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sh7m1"]
resource_name = "show_score"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Score:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fbi2q"]
resource_name = "show_time"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/Time:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j0y6p"]
_data = {
"RESET": SubResource("Animation_dn1g0"),
"show": SubResource("Animation_yyyw5"),
"show_deaths": SubResource("Animation_n7tcw"),
"show_goal_time": SubResource("Animation_6gbu7"),
"show_hearts": SubResource("Animation_gf70s"),
"show_score": SubResource("Animation_sh7m1"),
"show_time": SubResource("Animation_fbi2q")
}

[node name="LevelCompleted" type="ColorRect"]
process_mode = 3
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.215686)
script = ExtResource("1_4voqc")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_h54kp")
text = "Level Completed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hearts" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_h54kp")
text = "Hearts collected: 0/20"
vertical_alignment = 1

[node name="Deaths" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_h54kp")
text = "Deaths: 20x"
vertical_alignment = 1

[node name="Time" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_h54kp")
text = "Time: 25.26"
vertical_alignment = 1

[node name="LevelGoalTime" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_h54kp")
text = "Level goaL time: 200.2"
vertical_alignment = 1

[node name="Score" type="Label" parent="CenterContainer/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("2_h54kp")
text = "Total score:  10000"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Retry"

[node name="NextLevelButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Map Screen"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j0y6p")
}

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
